--- a/aplicacion/pagina/templates/index.html
+++ b/aplicacion/pagina/templates/index.html
@@ -58,9 +58,9 @@
           </div>
           <div class="g_id_signin" data-type="standard"></div>
         </div>
-        <div id="caja2">
+        <!-- <div id="caja2">
           <button id="logout-button" onclick="signOut()">Logout</button>
-        </div>
+        </div> -->
       </div>
     </div>
     </div>
@@ -100,7 +100,7 @@
       <p>La energía eólica aprovecha la fuerza del viento para generar electricidad de manera limpia y renovable.
         Además, es una de las fuentes de energía más antiguas, utilizada desde hace miles de años en molinos de viento.
       </p>
-      <a href="{{url_for('eolica')}}" class="btn btn-primary">Botón de la sección</a>
+      <a href="{{url_for('wind')}}" class="btn btn-primary">Botón de la sección</a>
     </div>
   </section>
   <section id="gas-natural" class="image-section">
@@ -110,7 +110,7 @@
       <p> El gas natural es una fuente de energía fósil que se extrae directamente de la naturaleza y llega a los
         consumidores sin apenas transformaciones químicas. Es el combustible fósil más limpio, ya que emite menos gases
         contaminantes que el petróleo o el carbón.</p>
-      <a href="{{url_for('gasNatural')}}" class="btn btn-primary">Botón de la sección</a>
+      <a href="{{url_for('natural')}}" class="btn btn-primary">Botón de la sección</a>
     </div>
   </section>
   <section id="hidraulica" class="image-section">
@@ -119,7 +119,7 @@
       <h3>Energía hidráulica</h3>
       <p>La energía hidráulica no solo genera electricidad de manera limpia y renovable, sino que también puede ayudar a
         controlar inundaciones y proporcionar agua para riego agrícola.</p>
-      <a href="{{url_for('hidraulica')}}" class="btn btn-primary">Botón de la sección</a>
+      <a href="{{url_for('hydro')}}" class="btn btn-primary">Botón de la sección</a>
     </div>
   </section>
   <section id="nuclear" class="image-section">
@@ -139,7 +139,7 @@
       <p>El petróleo no solo se usa para combustibles, sino que también es la base de muchos productos cotidianos como
         plásticos, champús y medicamentos. ¡Es sorprendente cómo este recurso impacta nuestra vida diaria!
       </p>
-      <a href="{{url_for('petroleo')}}" class="btn btn-primary">Botón de la sección</a>
+      <a href="{{url_for('oil')}}" class="btn btn-primary">Botón de la sección</a>
     </div>
   </section>
   <section id="solar" class="image-section">
