--- a/aplicacion/pagina/static/css/secundario.css
+++ b/aplicacion/pagina/static/css/secundario.css
@@ -3,3 +3,6 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+.navbar {
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
+}
