--- a/aplicacion/pagina/static/css/estilos.css
+++ b/aplicacion/pagina/static/css/estilos.css
@@ -1,32 +1,36 @@
 .navbar {
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.5));
 }
 
 
 
 .nav-link:hover {
-    background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
-    background-size: 1400% 1400%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: rainbow-text 10s ease infinite;
+  background: linear-gradient(90deg, red, orange, yellow, green, blue, indigo, violet);
+  background-size: 1400% 1400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rainbow-text 10s ease infinite;
 }
 
 @keyframes rainbow-text {
-    0% {
-        background-position: 0% 50%;
-      }
-      50% {
-        background-position: 100% 50%;
-      }
-      100% {
-        background-position: 0% 50%;
-      }
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
 
 .image-section {
   position: relative;
-  display: inline-block; 
+  display: inline-block;
   width: 100%;
   height: 100vh;
   margin-bottom: -6px;
@@ -41,34 +45,39 @@
 }
 
 .text-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(26, 26, 26, 0.6); /* Fondo gris con opacidad para el difuminado */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: left;
-    padding-left: 5%;
-    color: white; /* Color del texto para que sea visible sobre el fondo gris */
-    text-align: left;
-  }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(26, 26, 26, 0.6);
+  /* Fondo gris con opacidad para el difuminado */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  padding-left: 5%;
+  color: white;
+  /* Color del texto para que sea visible sobre el fondo gris */
+  text-align: left;
+}
 
 .text-overlay button {
-    background: white;
-    color: #016a7f;
-    border: none;
-    align-self: flex-start; /* Alinear el botón a la izquierda */
-  }
-  .text-overlay a {
-    background: white;
-    color: #016a7f;
-    border: none;
-    align-self: flex-start; /* Alinear el botón a la izquierda */
-  }
+  background: white;
+  color: #016a7f;
+  border: none;
+  align-self: flex-start;
+  /* Alinear el botón a la izquierda */
+}
+
+.text-overlay a {
+  background: white;
+  color: #016a7f;
+  border: none;
+  align-self: flex-start;
+  /* Alinear el botón a la izquierda */
+}
 
 .text-overlay p {
-    max-width: 50%;
+  max-width: 50%;
 }
