--- a/aplicacion/pagina/templates/grafico.html
+++ b/aplicacion/pagina/templates/grafico.html
@@ -1,17 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Información de la Ruta</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='imagenes/beneficios.svg')}}">
+    <link href="{{ url_for('static', filename='css/secundario.css') }}" rel="stylesheet">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
+
 <body>
+    <nav class="navbar navbar-expand-lg sticky-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('inicio')}}">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
+                aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-toggler">
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('coal')}}">Carbón</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('wind')}}">Eólica</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('natural')}}">Gas Natual</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('hydro')}}">Hidráulica</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('nuclear')}}">Nuclear</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('oil')}}">Petroleo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('solar')}}">Solar</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="caja">
+                <div id="g_id_onload"
+                    data-client_id="731724841818-fv7v54nb8gk2vh5bgecp9qfr41nq4odj.apps.googleusercontent.com"
+                    data-callback="login">
+                </div>
+                <div class="g_id_signin" data-type="standard"></div>
+            </div>
+            <div id="caja2" class="container" style="display: none; align-items: center; width: auto;">
+                <img class="imagenUsuario" style="width: 30px; height: 30px; border-radius: 50%;" id="imagenUsuario"
+                    alt="Imagen usuario" />
+                <p id="nombreUsuario" style="margin-left: 10px; margin-right: 10px; margin-top: 15px;"
+                    class="nombreUsuario"></p>
+                <button id="logout-button" onclick="signOut()" class="btn btn-danger">Cerrar sesión</button>
+            </div>
+        </div>
+    </nav>
     <h1></h1>
     <canvas id="myChart"></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="{{url_for('static', filename='js/index.js')}}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
     <script src="{{url_for('static', filename='js/grafico.js')}}"></script>
     <script>
         obtenerInfoRuta();
     </script>
 </body>
+
 </html>
