--- a/aplicacion/pagina/templates/index.html
+++ b/aplicacion/pagina/templates/index.html
@@ -51,18 +51,19 @@
             <a class="nav-link" href="#solar">Solar</a>
           </li>
         </ul>
-        <div id="caja">
-          <div id="g_id_onload"
-            data-client_id="731724841818-fv7v54nb8gk2vh5bgecp9qfr41nq4odj.apps.googleusercontent.com"
-            data-callback="hacer2">
-          </div>
-          <div class="g_id_signin" data-type="standard"></div>
-        </div>
-        <!-- <div id="caja2">
-          <button id="logout-button" onclick="signOut()">Logout</button>
-        </div> -->
       </div>
-    </div>
+      <div id="caja">
+        <div id="g_id_onload"
+          data-client_id="731724841818-fv7v54nb8gk2vh5bgecp9qfr41nq4odj.apps.googleusercontent.com"
+          data-callback="login">
+        </div>
+        <div class="g_id_signin" data-type="standard"></div>
+      </div>
+      <div id="caja2" class="container" style="display: none; align-items: center; width: auto;">
+        <img class="imagenUsuario" style="width: 30px; height: 30px; border-radius: 50%;" id="imagenUsuario" alt="Imagen usuario"/>
+        <p id="nombreUsuario" style="margin-left: 10px; margin-right: 10px; margin-top: 15px;" class="nombreUsuario"></p>
+        <button id="logout-button" onclick="signOut()" class="btn btn-danger">Cerrar sesión</button>
+      </div>
     </div>
   </nav>
   <!-- <li class="nav-item dropdown">
@@ -81,7 +82,6 @@
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form> -->
-  <!-- Imagen insertada -->
   <section id="carbon" class="image-section">
     <img src="{{url_for('static', filename='imagenes/carbon.webp')}}" alt="Imagen de carbon" class="img-fluid">
     <div class="text-overlay">
@@ -161,4 +161,5 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
 </body>
+
 </html>
