--- a/aplicacion/pagina/templates/producto.html
+++ b/aplicacion/pagina/templates/producto.html
@@ -13,11 +13,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="imagenes/beneficios.svg">
+    <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='imagenes/beneficios.svg')}}">
     <link href="{{ url_for('static', filename='css/secundario.css') }}" rel="stylesheet">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id"
-        content="731724841818-fv7v54nb8gk2vh5bgecp9qfr41nq4odj.apps.googleusercontent.com">
 </head>
 
 <body>
@@ -53,27 +51,49 @@
                     </li>
                 </ul>
             </div>
+            <div id="caja">
+                <div id="g_id_onload"
+                    data-client_id="731724841818-fv7v54nb8gk2vh5bgecp9qfr41nq4odj.apps.googleusercontent.com"
+                    data-callback="login">
+                </div>
+                <div class="g_id_signin" data-type="standard"></div>
+            </div>
+            <div id="caja2" class="container" style="display: none; align-items: center; width: auto;">
+                <img class="imagenUsuario" style="width: 30px; height: 30px; border-radius: 50%;" id="imagenUsuario"
+                    alt="Imagen usuario" />
+                <p id="nombreUsuario" style="margin-left: 10px; margin-right: 10px; margin-top: 15px;"
+                    class="nombreUsuario"></p>
+                <button id="logout-button" onclick="signOut()" class="btn btn-danger">Cerrar sesión</button>
+            </div>
         </div>
     </nav>
     <h3>Los más grandes de la historia</3>
-    <hr />
-    <h3>Todos los paises</h3>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th id="indice-header" scope="col" data-column="indice">Indice</th>
-                            <th id="pais-header" scope="col" data-column="pais">Pais</th>
-                        </tr>
-                    </thead>
-                    <tbody id="data-table">
-                    </tbody>
-                </table>
+        <hr />
+        <h3>Todos los paises</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                            <tr>
+                                <th id="indice-header" scope="col" data-column="indice">Indice</th>
+                                <th id="pais-header" scope="col" data-column="pais">Pais</th>
+                            </tr>
+                        </thead>
+                        <tbody id="data-table">
+                        </tbody>
+                    </table>
+                </div>
             </div>
-        </div>
-    <script src="{{url_for('static', filename='js/producto.js')}}"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+            </script>
+          <script src="https://accounts.google.com/gsi/client" async defer></script>
+          <script src="{{url_for('static', filename='js/index.js')}}"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+          <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+            <script src="{{url_for('static', filename='js/producto.js')}}"></script>
 </body>
 
 </html>
