--- a/aplicacion/pagina/templates/producto.html
+++ b/aplicacion/pagina/templates/producto.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="loleandote" />
     <meta name="description" content="pagina de las apis" />
-    <meta name="keywords" content="apis, desarrollo, programacion" />
+    <meta name="keywords" content="desarrollo, programacion" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mi pagina</title>
     <!-- Boostrap-->
@@ -63,7 +63,10 @@
                     alt="Imagen usuario" />
                 <p id="nombreUsuario" style="margin-left: 10px; margin-right: 10px; margin-top: 15px;"
                     class="nombreUsuario"></p>
-                <button id="logout-button" onclick="signOut()" class="btn btn-danger">Cerrar sesión</button>
+                <button id="logout-button" onclick="signOut()" class="btn">
+                    <img src="{{url_for('static', filename='imagenes/logout.svg')}}" style=" height: 30px"
+                        alt="Icono de cerrar sesión" class="img-fluid" />
+                </button>
             </div>
         </div>
     </nav>
@@ -86,14 +89,13 @@
                 </div>
             </div>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-            </script>
-          <script src="https://accounts.google.com/gsi/client" async defer></script>
-          <script src="{{url_for('static', filename='js/index.js')}}"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-          <script src="https://apis.google.com/js/platform.js?onload=init" async defer></script>
+                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                crossorigin="anonymous">
+                </script>
+            <script src="https://accounts.google.com/gsi/client" async defer></script>
+            <script src="{{url_for('static', filename='js/index.js')}}"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
             <script src="{{url_for('static', filename='js/producto.js')}}"></script>
 </body>
-
 </html>
