--- a/aplicacion/pagina/templates/grafico.html
+++ b/aplicacion/pagina/templates/grafico.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Información de la Ruta</title>
+    <title>Grafico con analisis</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='imagenes/beneficios.svg')}}">
     <link href="{{ url_for('static', filename='css/secundario.css') }}" rel="stylesheet">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+
 </head>
 
 <body>
@@ -68,17 +69,28 @@
     </nav>
     <h1></h1>
     <canvas id="myChart"></canvas>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    <div class="contenedor-caja-analisis">
+        <div class="caja-analisis">
+            <h2>Nivel de correlación</h2>
+            <p id="correlacion"></p>
+            <canvas class="graficoTarta" id="myPieChart" width="400" height="400"></canvas>
+        </div>
+        <div class="caja-analisis">
+            <h2>Analisis de los últimos 5 años</h2>
+            <p id="analisis"></p>
+            <img id="imagenAnalisis" alt="Analisis" style="height: 300px; width: 300px;" class="img-fluid" />
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+            </script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
+        <script src="{{url_for('static', filename='js/index.js')}}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+        <script src="{{url_for('static', filename='js/grafico.js')}}"></script>
+        <script>
+            obtenerInfoRuta();
         </script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <script src="{{url_for('static', filename='js/index.js')}}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="{{url_for('static', filename='js/grafico.js')}}"></script>
-    <script>
-        obtenerInfoRuta();
-    </script>
 </body>
 
 </html>
