--- a/aplicacion/pagina/templates/producto.html
+++ b/aplicacion/pagina/templates/producto.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{url_for('inicio')}}">Navbar</a>
+            <a class="navbar-brand" href="{{url_for('inicio')}}">Inicio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler"
                 aria-controls="navbar-toggler" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -70,32 +70,30 @@
             </div>
         </div>
     </nav>
-    <h3>Los más grandes de la historia</3>
-        <hr />
-        <h3>Todos los paises</h3>
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th id="indice-header" scope="col" data-column="indice">Indice</th>
-                                <th id="pais-header" scope="col" data-column="pais">Pais</th>
-                            </tr>
-                        </thead>
-                        <tbody id="data-table">
-                        </tbody>
-                    </table>
-                </div>
+    <h3>Todos los paises</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th id="indice-header" scope="col" data-column="indice">Indice</th>
+                            <th id="pais-header" scope="col" data-column="pais">Pais</th>
+                        </tr>
+                    </thead>
+                    <tbody id="data-table">
+                    </tbody>
+                </table>
             </div>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-                crossorigin="anonymous">
-                </script>
-            <script src="https://accounts.google.com/gsi/client" async defer></script>
-            <script src="{{url_for('static', filename='js/index.js')}}"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-            <script src="{{url_for('static', filename='js/producto.js')}}"></script>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+            </script>
+        <script src="https://accounts.google.com/gsi/client" async defer></script>
+        <script src="{{url_for('static', filename='js/index.js')}}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+        <script src="{{url_for('static', filename='js/producto.js')}}"></script>
 </body>
+
 </html>
